Date Format + Email Address Cutoff Fix + iFrame border adjustment

--- a/src/additional.css
+++ b/src/additional.css
@@ -6,6 +6,9 @@ em {
   color: black;
 }
 
+iframe {
+  border: 0px;
+}
 
 .site-layout-content {
   min-height: 280px;
